--- a/templates/apps/fruits.html
+++ b/templates/apps/fruits.html
@@ -1,4 +1,4 @@
-{%extends 'first.html' %}
+{%extends 'apps/first.html' %}
 {%block title%}Third Page{%endblock%}
 {%block content%}
 <!-- To print key and values passed in views to templates -->
