--- a/templates/apps/third.html
+++ b/templates/apps/third.html
@@ -1,4 +1,4 @@
-{%extends 'first.html' %}
+{%extends 'apps/first.html' %}
 {%block title%}Third Page{%endblock%}
 {%block content%}
     <p>Name:{{name}}</p>
