--- a/templates/apps/second.html
+++ b/templates/apps/second.html
@@ -1,5 +1,5 @@
 <!-- extends is used to extend the first.html styles -->
-{%extends 'first.html' %}
+{%extends 'apps/first.html' %}
 <!-- Block title is used to dynamically print title extend from first.html -->
 {%block title%}Second Page{%endblock%}
 <!-- Block content is used to dynamically print content extend from first.html -->
