--- a/templates/apps/images.html
+++ b/templates/apps/images.html
@@ -1,16 +1,20 @@
 {%extends 'apps/first.html' %}
 {%load static %}
+{%block title%}Images{%endblock%}
 {%block content%}
 <link rel="stylesheet" href="{%static 'css/style.css'%}">
 <h1>Images</h1>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
-            <img src="{% static 'images/Python.jpg' %}" class="img-fluid" alt="python.jpg"/>
-        </div>
+        {%if var%}
         <div class="col-md-6">
             <img src="{% static 'images/django.jpg' %}" class="img-fluid" alt="django.jpg"/>
         </div>
+        {%else%}
+        <div class="col-md-6">
+            <img src="{% static 'images/Python.jpg' %}" class="img-fluid" alt="python.jpg"/>
+        </div>
+        {%endif%}
     </div>
 </div>
 {%endblock%}
