--- a/templates/apps/images.html
+++ b/templates/apps/images.html
@@ -1,8 +1,9 @@
 {%extends 'apps/first.html' %}
-{%load static %}
+{%load static %} <!-- load a static files in html -->
 {%block title%}Images{%endblock%}
 {%block content%}
-<link rel="stylesheet" href="{%static 'css/style.css'%}">
+<!-- after load a static files stylesheet must declare inside block content -->
+<link rel="stylesheet" href="{%static 'css/style.css'%}"> 
 <h1>Images</h1>
 <div class="container-fluid">
     <div class="row">
