create forms and add css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
 h1{
-    color: crimson;   
+    text-align: center;
+    margin-top: 1rem;
+    color:blue;   
+}
+
+.col-md-6{
+    margin: 0 auto;
 }
