--- a/templates/apps/myforms.html
+++ b/templates/apps/myforms.html
@@ -8,6 +8,8 @@
     <div class="row">
         <div class="col-md-6">
             <form method="POST" action="{% url 'submitform' %}">
+                 <!-- using GET method CSRF not needed  -->
+                 <!-- action tag you need to pass the path name="submitform" -->
                 {% csrf_token %}
                 <div class="form-group">
                   <label for="Email">Email address</label>
