--- a/templates/apps/alert.html
+++ b/templates/apps/alert.html
@@ -1,9 +1,20 @@
 {% extends "apps/first.html"%}
-{%block content%}
+{% block title %}Login Forms{%endblock%}
+{%load static%}
+{% block content %}
+<link rel="stylesheet" href="{%static 'css/style.css'%}">
 <div class="col-md-6">
-<form action="POST">
-{%csrf_token%}
-
+{% if success == True %}
+<div class="alert alert-success alert-dismissible fade show" role="alert" style=" margin-top: 1rem;">
+    <strong>{{successmsg}}</strong> 
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{% endif %}
+<h1>Login Form</h1>
+<form method="POST">
+    {%csrf_token%}
+    {{loginfo.as_ul}}
+    <button type="submit" class="btn btn-primary cent">submit</button>
 </form>
 </div>
 {%endblock%}
